compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__module_could_not_unify.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 693
expression: "fn go() { 1 + 2.0 }"
snapshot_kind: text
---
----- SOURCE CODE
fn go() { 1 + 2.0 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:15
  │
1 │ fn go() { 1 + 2.0 }
  │               ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats
